[project]
name = "kryptools"
version = "0.8"
authors = [
  { name="Gerald Teschl", email="gerald.teschl@univie.ac.at" },
]
description = "Implemenation of same basic algorithms used in cryptography."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/teschlg/kryptools"
Issues = "https://github.com/teschlg/kryptools/issues"
Docs = "https://github.com/teschlg/kryptools/tree/main/doc"