[project]
name = "kryptools"
version = "1.9.1"
authors = [
  { name="Gerald Teschl", email="gerald.teschl@univie.ac.at" },
]
description = "Implemenation of same basic algorithms used in cryptography."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/teschlg/kryptools"
Source = "https://github.com/teschlg/kryptools"
Issues = "https://github.com/teschlg/kryptools/issues"
Docs = "https://github.com/teschlg/kryptools/tree/main/doc"